dfir_rs/tests/snapshots/surface_difference_anti_join__anti_join_types@graphvis_dot.snap
---
source: dfir_rs/tests/surface_difference_anti_join.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_stream(inp_recv)", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) tee()", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) map(|x: (usize, usize)| x.0)", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) anti_join_multiset()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) tee()", shape=house, fillcolor="#ffff88"]
    n6v1 [label="(n6v1) anti_join_multiset::<usize, usize>()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) for_each(|_| {})", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) map(|x: (usize, usize)| x.0)", shape=house, fillcolor="#ffff88"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n10v1 [label="(n10v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n12v1 [label="(n12v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n2v1 -> n9v1
    n3v1 -> n10v1
    n2v1 -> n3v1
    n4v1 -> n5v1
    n6v1 -> n7v1
    n5v1 -> n11v1
    n8v1 -> n12v1
    n5v1 -> n8v1
    n9v1 -> n4v1 [label="pos"]
    n10v1 -> n4v1 [label="neg", color=red]
    n11v1 -> n6v1 [label="pos"]
    n12v1 -> n6v1 [label="neg", color=red]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n3v1
        subgraph sg_1v1_var_inp {
            cluster=true
            label="var inp"
            n1v1
            n2v1
        }
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 2"
        subgraph sg_2v1_var_diff2 {
            cluster=true
            label="var diff2"
            n6v1
            n7v1
        }
    }
    subgraph sg_3v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n8v1
        subgraph sg_3v1_var_diff {
            cluster=true
            label="var diff"
            n4v1
            n5v1
        }
    }
}
